# qt-opengl-particle-simulation

./: .gitignore  CMakeLists.txt  FS.fsh  Physics.comp  Qt_grapth.pro  README.md  Shaders.qrc  VS.vsh  body.cpp  body.h  camera.cpp  camera.h  gl_game.cpp  gl_game.h  main.cpp  qmainwindows_.cpp  qmainwindows_.h  world.cpp  world.h
